force-app/main/default/objects/aos_Support_Request__c/aos_Support_Request__c.object-meta.xml
<CustomObject>
    <description>Behaviour Support Plans And Foster Carer Requests for Animals</description>
    <label>Support Request</label>
    <nameField>
        <displayFormat>Support Request {0000}</displayFormat>
        <label>Support Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>