force-app/main/default/objects/aos_Support_Request__c/fields/aos_Age__c.field-meta.xml
<CustomField>
    <fullName>aos_Age__c</fullName>
    <formula>aos_Animal__r.animalos__Calculated_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>