force-app/main/default/objects/aos_Support_Request__c/fields/aos_Animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Support Requests</relationshipLabel>
    <relationshipName>aos_Support_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>