force-app/main/default/objects/aos_Support_Request__c/fields/aos_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Name__c</fullName>
    <formula>aos_Animal__r.animalos__Animal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Name</label>
    <type>Text</type>
</CustomField>