force-app/main/default/objects/aos_Support_Request__c/fields/aos_Animal_to_be_Returned_to__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_to_be_Returned_to__c</fullName>
    <formula>aos_Animal__r.animalos__Current_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal to be Returned to</label>
    <type>Text</type>
</CustomField>