force-app/main/default/objects/aos_Support_Request__c/fields/aos_Any_additional_information__c.field-meta.xml
<CustomField>
    <fullName>aos_Any_additional_information__c</fullName>
    <inlineHelpText>e.g. specific handlers that may be able to provide further info, any incidents with staff/other animals, flags in home/in care history</inlineHelpText>
    <label>Any additional information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>