force-app/main/default/objects/aos_Support_Request__c/fields/aos_Any_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Any_Further_Details__c</fullName>
    <label>Any Further Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>