force-app/main/default/objects/aos_Support_Request__c/fields/aos_BE_Completed__c.field-meta.xml
<CustomField>
    <fullName>aos_BE_Completed__c</fullName>
    <label>BE Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>