force-app/main/default/objects/aos_Support_Request__c/fields/aos_Behaviour_Requirements_of_Fos__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour_Requirements_of_Fos__c</fullName>
    <inlineHelpText>Behaviour/Medical requirements of Foster Carer</inlineHelpText>
    <label>Behaviour Requirements of Foster Carer</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>