force-app/main/default/objects/aos_Support_Request__c/fields/aos_Behaviourl_requirements_of_Fos__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviourl_requirements_of_Fos__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Behaviour requirements of Fos</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>