force-app/main/default/objects/aos_Support_Request__c/fields/aos_Breed__c.field-meta.xml
<CustomField>
    <fullName>aos_Breed__c</fullName>
    <formula>aos_Animal__r.animalos__Primary_Breed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breed</label>
    <type>Text</type>
</CustomField>