force-app/main/default/objects/aos_Support_Request__c/fields/aos_Can_the_animal_travel_by_plane__c.field-meta.xml
<CustomField>
    <fullName>aos_Can_the_animal_travel_by_plane__c</fullName>
    <inlineHelpText>Is this animal behaviourally/medically well to travel by plane if required?</inlineHelpText>
    <label>Can the animal travel by plane</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>