force-app/main/default/objects/aos_Support_Request__c/fields/aos_Colour__c.field-meta.xml
<CustomField>
    <fullName>aos_Colour__c</fullName>
    <formula>TEXT(aos_Animal__r.animalos__Primary_Colour__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colour</label>
    <type>Text</type>
</CustomField>