force-app/main/default/objects/aos_Support_Request__c/fields/aos_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Comments__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <description>Describe reason why animal requires Behaviour Support</description>
    <label>Comments</label>
    <length>30</length>
    <type>Text</type>
</CustomField>