force-app/main/default/objects/aos_Support_Request__c/fields/aos_Consult_Required_Prior_To_Foster__c.field-meta.xml
<CustomField>
    <fullName>aos_Consult_Required_Prior_To_Foster__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If medical request, does this animal require a consult prior to foster</inlineHelpText>
    <label>Consult Required Prior To Foster</label>
    <type>Checkbox</type>
</CustomField>