force-app/main/default/objects/aos_Support_Request__c/fields/aos_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Declined_Reason__c</fullName>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capacity - Space</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Welfare/ Multiple behaviour concerns</fullName>
            </value>
            <value>
                <fullName>Capacity – Rehab specific</fullName>
            </value>
            <value>
                <fullName>Shelter Rescinded</fullName>
            </value>
            <value>
                <fullName>Treatments due or overdue</fullName>
            </value>
            <value>
                <fullName>More information for placement required</fullName>
            </value>
            <value>
                <fullName>Insufficient medical information</fullName>
            </value>
            <value>
                <fullName>Insufficient behavioural information</fullName>
            </value>
            <value>
                <fullName>Foster program capacity reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>