force-app/main/default/objects/aos_Support_Request__c/fields/aos_Desex__c.field-meta.xml
<CustomField>
    <fullName>aos_Desex__c</fullName>
    <formula>aos_Animal__r.animalos__Neutered_Spayed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desex</label>
    <type>Checkbox</type>
</CustomField>