force-app/main/default/objects/aos_Support_Request__c/fields/aos_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>