force-app/main/default/objects/aos_Support_Request__c/fields/aos_End_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_End_Date__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <description>Behaviour Support Plan End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>