force-app/main/default/objects/aos_Support_Request__c/fields/aos_Estimated_length_of_care_needed__c.field-meta.xml
<CustomField>
    <fullName>aos_Estimated_length_of_care_needed__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Estimated length of care needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>