force-app/main/default/objects/aos_Support_Request__c/fields/aos_FCR_Any_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_FCR_Any_Further_Details__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Further Details e.g. Current Medication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>