force-app/main/default/objects/aos_Support_Request__c/fields/aos_Foster_Carers_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Carers_ID__c</fullName>
    <label>Foster Carers ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>