force-app/main/default/objects/aos_Support_Request__c/fields/aos_Foster_Carers_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Carers_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Foster Carers Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Foster Carers Name</relationshipLabel>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>