force-app/main/default/objects/aos_Support_Request__c/fields/aos_Foster_Carers_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Carers_Phone_Number__c</fullName>
    <label>Foster Carers Phone Number</label>
    <type>Phone</type>
</CustomField>