force-app/main/default/objects/aos_Support_Request__c/fields/aos_Has_a_health_check_card_been__c.field-meta.xml
<CustomField>
    <fullName>aos_Has_a_health_check_card_been__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Has a health check card been completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>