force-app/main/default/objects/aos_Support_Request__c/fields/aos_Has_this_animal_had_a_BA_completed__c.field-meta.xml
<CustomField>
    <fullName>aos_Has_this_animal_had_a_BA_completed__c</fullName>
    <label>Has this animal had a BA completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>Not Yet but Scheduled</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>