force-app/main/default/objects/aos_Support_Request__c/fields/aos_Health_Check_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Health_Check_Comments__c</fullName>
    <label>Health Check Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>