force-app/main/default/objects/aos_Support_Request__c/fields/aos_Health_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>aos_Health_Check_Completed__c</fullName>
    <label>Health Check Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No – see comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>