force-app/main/default/objects/aos_Support_Request__c/fields/aos_Home_or_in_Care_History__c.field-meta.xml
<CustomField>
    <fullName>aos_Home_or_in_Care_History__c</fullName>
    <label>Home or in Care History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>