force-app/main/default/objects/aos_Support_Request__c/fields/aos_How_has_this_animal_been_managed_in__c.field-meta.xml
<CustomField>
    <fullName>aos_How_has_this_animal_been_managed_in__c</fullName>
    <inlineHelpText>What rehab has been attempted, what’s the current management plan and routine, animal’s preferences</inlineHelpText>
    <label>How has this animal been managed in care</label>
    <length>255</length>
    <type>Text</type>
</CustomField>