force-app/main/default/objects/aos_Support_Request__c/fields/aos_Is_Animal_Approved_for_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_Animal_Approved_for_Social_Media__c</fullName>
    <label>Is Animal Approved for Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Following review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>