force-app/main/default/objects/aos_Support_Request__c/fields/aos_Is_the_Animal_Ready_to_go__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_the_Animal_Ready_to_go__c</fullName>
    <label>Is the Animal Ready to go Immediately</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No - See Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>