force-app/main/default/objects/aos_Support_Request__c/fields/aos_Main_Reasons_For_Rescue__c.field-meta.xml
<CustomField>
    <fullName>aos_Main_Reasons_For_Rescue__c</fullName>
    <inlineHelpText>What are the main reasons you are requesting Rescue for this animal?
 i.e What do we expect rescue to be able to help with? 
Consider if we can adopt out ourselves.  
&quot;e.g. Touch tolerance rehab; breed specific adopter; temporary housing not in a kennel; dog socialisation; complete additional medical procedures.</inlineHelpText>
    <label>Main Reasons For Rescue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>