force-app/main/default/objects/aos_Support_Request__c/fields/aos_Medical_Issues_prior_to_placements__c.field-meta.xml
<CustomField>
    <fullName>aos_Medical_Issues_prior_to_placements__c</fullName>
    <inlineHelpText>List any medical issues or medical procedures required prior to placement</inlineHelpText>
    <label>Medical Issues prior to placements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>