force-app/main/default/objects/aos_Support_Request__c/fields/aos_Medical_requirements_of_Foster_Carer__c.field-meta.xml
<CustomField>
    <fullName>aos_Medical_requirements_of_Foster_Carer__c</fullName>
    <label>Medical requirements of Foster Carer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>