force-app/main/default/objects/aos_Support_Request__c/fields/aos_Medications__c.field-meta.xml
<CustomField>
    <fullName>aos_Medications__c</fullName>
    <label>Medications</label>
    <type>TextArea</type>
</CustomField>