force-app/main/default/objects/aos_Support_Request__c/fields/aos_Microchip_number__c.field-meta.xml
<CustomField>
    <fullName>aos_Microchip_number__c</fullName>
    <formula>aos_Animal__r.animalos__Microchip_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Microchip Number</label>
    <type>Text</type>
</CustomField>