force-app/main/default/objects/aos_Support_Request__c/fields/aos_Name_of_Manager_Approving_Placement__c.field-meta.xml
<CustomField>
    <fullName>aos_Name_of_Manager_Approving_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Manager Approving Placement</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Name_of_Manager_Approving_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>