force-app/main/default/objects/aos_Support_Request__c/fields/aos_Name_of_Shelter_Manager_Who_Approved__c.field-meta.xml
<CustomField>
    <fullName>aos_Name_of_Shelter_Manager_Who_Approved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>