force-app/main/default/objects/aos_Support_Request__c/fields/aos_Not_suitable_for_shelter_transfer__c.field-meta.xml
<CustomField>
    <fullName>aos_Not_suitable_for_shelter_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not suitable for shelter transfer</label>
    <type>Checkbox</type>
</CustomField>