force-app/main/default/objects/aos_Support_Request__c/fields/aos_Other_Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_Reason_for_Request__c</fullName>
    <label>Other Reason for Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>