force-app/main/default/objects/aos_Support_Request__c/fields/aos_Priority__c.field-meta.xml
<CustomField>
    <fullName>aos_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exhausted pathways at current site</fullName>
            </value>
            <value>
                <fullName>Fast Track (puppies, welfare concerns)</fullName>
            </value>
            <value>
                <fullName>Mum and Litters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>