force-app/main/default/objects/aos_Support_Request__c/fields/aos_Priority_Case__c.field-meta.xml
<CustomField>
    <fullName>aos_Priority_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if this is a Priority Case</inlineHelpText>
    <label>Priority Case</label>
    <type>Checkbox</type>
</CustomField>