force-app/main/default/objects/aos_Support_Request__c/fields/aos_Priority_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Priority_Reason__c</fullName>
    <inlineHelpText>What is/are the reason/s this case is Piority.</inlineHelpText>
    <label>Priority Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DUFR Outcome</fullName>
            </value>
            <value>
                <fullName>Welfare concern - Stressed in kennels</fullName>
            </value>
            <value>
                <fullName>Foster required for medical recovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>