force-app/main/default/objects/aos_Support_Request__c/fields/aos_Prognosis__c.field-meta.xml
<CustomField>
    <fullName>aos_Prognosis__c</fullName>
    <label>Prognosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Guarded</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>