force-app/main/default/objects/aos_Support_Request__c/fields/aos_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>aos_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggression/ reactivity towards other animals</fullName>
            </value>
            <value>
                <fullName>Reactivity</fullName>
                <label>Aggression/ reactivity towards other dogs/cats (same species)</label>
            </value>
            <value>
                <fullName>Aggressive over food</fullName>
            </value>
            <value>
                <fullName>Aggressive when having objects removed</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Bite risk</fullName>
                <label>Bite risk/ history of aggression</label>
            </value>
            <value>
                <fullName>Destructive of household items</fullName>
            </value>
            <value>
                <fullName>Management – touch</fullName>
                <label>Dislikes handling/ Touch sensitive</label>
            </value>
            <value>
                <fullName>Escape</fullName>
            </value>
            <value>
                <fullName>Excessive/high energy</fullName>
            </value>
            <value>
                <fullName>Fear/avoidance</fullName>
                <label>Fear/avoidance/ timid</label>
            </value>
            <value>
                <fullName>Foster Required</fullName>
            </value>
            <value>
                <fullName>Frustration/arousal</fullName>
            </value>
            <value>
                <fullName>House training/toileting</fullName>
            </value>
            <value>
                <fullName>Kennel Stress</fullName>
            </value>
            <value>
                <fullName>Management – walking</fullName>
            </value>
            <value>
                <fullName>Mouthing/nipping</fullName>
            </value>
            <value>
                <fullName>Noisy (barking/vocalising)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>