force-app/main/default/objects/aos_Support_Request__c/fields/aos_Reason_for_Foster_Care__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_for_Foster_Care__c</fullName>
    <label>Reason for Foster Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Socialisation</fullName>
            </value>
            <value>
                <fullName>Too young for desex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>