force-app/main/default/objects/aos_Support_Request__c/fields/aos_Reason_for_Rehab__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_for_Rehab__c</fullName>
    <label>Reason for Rehab</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arousal/frustration – Humans</fullName>
            </value>
            <value>
                <fullName>Arousal/Frustration – Other animals</fullName>
            </value>
            <value>
                <fullName>Arousal Frustration – In Kennel</fullName>
            </value>
            <value>
                <fullName>Arousal/Frustration - General</fullName>
            </value>
            <value>
                <fullName>Fear/Avoidance – Humans</fullName>
            </value>
            <value>
                <fullName>Fear/Avoidance – Other animals.</fullName>
            </value>
            <value>
                <fullName>Fear/Avoidance – Novelty</fullName>
            </value>
            <value>
                <fullName>Fear/Avoidance - Environment</fullName>
            </value>
            <value>
                <fullName>Appeasement Behaviours -Humans</fullName>
            </value>
            <value>
                <fullName>Appeasements Behaviours – Other animals</fullName>
            </value>
            <value>
                <fullName>Handling/Touch Sensitivity</fullName>
            </value>
            <value>
                <fullName>Co-operative Care Plan</fullName>
            </value>
            <value>
                <fullName>Requires Post Adoptive Support</fullName>
            </value>
            <value>
                <fullName>Puppy life skills required.</fullName>
            </value>
            <value>
                <fullName>Protective Custody/Hold</fullName>
            </value>
            <value>
                <fullName>Mum and Litters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>