force-app/main/default/objects/aos_Support_Request__c/fields/aos_Reason_for_Rescue_Request__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_for_Rescue_Request__c</fullName>
    <label>Reason for Rescue Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behavioural Rehabilitation - Please advise below, the details of the rehab required by a Rescue Group</fullName>
            </value>
            <value>
                <fullName>Medical Rehabilitation - Please advise below, the details of the rehab required by a Rescue Group</fullName>
            </value>
            <value>
                <fullName>Not Coping in the shelter, otherwise SFA</fullName>
            </value>
            <value>
                <fullName>Animal is currently Available for Adoption - requesting it be shared by Rescue Groups</fullName>
            </value>
            <value>
                <fullName>Breed Specific Needs</fullName>
            </value>
            <value>
                <fullName>Shelter Capacity Issues (otherwise animal would be classified SFA)</fullName>
            </value>
            <value>
                <fullName>Other - Please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>