force-app/main/default/objects/aos_Support_Request__c/fields/aos_Reason_Why_Animal_Is_Not_Ready__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_Why_Animal_Is_Not_Ready__c</fullName>
    <label>Reason Why Animal Is Not Ready?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>