force-app/main/default/objects/aos_Support_Request__c/fields/aos_Reason_why_the_animal_is_not_yet__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_why_the_animal_is_not_yet__c</fullName>
    <label>Reason why the animal is not yet ready?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>