force-app/main/default/objects/aos_Support_Request__c/fields/aos_Recommended_Diet__c.field-meta.xml
<CustomField>
    <fullName>aos_Recommended_Diet__c</fullName>
    <inlineHelpText>Wet or Dry and how many times a day</inlineHelpText>
    <label>Recommended Diet</label>
    <type>TextArea</type>
</CustomField>