force-app/main/default/objects/aos_Support_Request__c/fields/aos_Rehab_Requirements_Provide_details__c.field-meta.xml
<CustomField>
    <fullName>aos_Rehab_Requirements_Provide_details__c</fullName>
    <description>details of behaviour, in what context, frequency of behaviour, which environment, distance of stimulus, why do we need to address the behaviour</description>
    <label>Rehab Requirements - Provide details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>