force-app/main/default/objects/aos_Support_Request__c/fields/aos_Released_Insp_Case_or_Programs__c.field-meta.xml
<CustomField>
    <fullName>aos_Released_Insp_Case_or_Programs__c</fullName>
    <inlineHelpText>Is this a released Insp Case or Programs animals and are their restrictions on the rescue group sharing on Social Media</inlineHelpText>
    <label>Released Insp Case or Programs animals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes I have notified the relevant Insp/programs case worker.</fullName>
            </value>
            <value>
                <fullName>No restrictions on social media presence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>