force-app/main/default/objects/aos_Support_Request__c/fields/aos_Relevant_Home_or_In_Care_History__c.field-meta.xml
<CustomField>
    <fullName>aos_Relevant_Home_or_In_Care_History__c</fullName>
    <label>Relevant Home or In Care History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>