force-app/main/default/objects/aos_Support_Request__c/fields/aos_Request_Progress_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Request_Progress_Comments__c</fullName>
    <label>Request Progress Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>