force-app/main/default/objects/aos_Support_Request__c/fields/aos_Request_Shelter_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Request_Shelter_Location_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Shelter Location Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>animalos__Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Support Requests</relationshipLabel>
    <relationshipName>aos_Behaviour_Support_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>