force-app/main/default/objects/aos_Support_Request__c/fields/aos_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Pending More Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>