force-app/main/default/objects/aos_Support_Request__c/fields/aos_Shelter_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Shelter_ID__c</fullName>
    <formula>aos_Animal__r.animalos__Shelter_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shelter ID</label>
    <type>Text</type>
</CustomField>