force-app/main/default/objects/aos_Support_Request__c/fields/aos_Specific_Details_And_Needs_Of_Animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Specific_Details_And_Needs_Of_Animal__c</fullName>
    <inlineHelpText>Including existing medical conditions and behavioural concerns). Please provide as much information as possible</inlineHelpText>
    <label>Specific Details And Needs Of Animal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>