force-app/main/default/objects/aos_Support_Request__c/fields/aos_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Start_Date__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <description>Start Date of Behaviour Support Plan</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>