force-app/main/default/objects/aos_Support_Request__c/fields/aos_Support_Plan_Manager_Notified__c.field-meta.xml
<CustomField>
    <fullName>aos_Support_Plan_Manager_Notified__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Checked when the Support Plan Manager is first notified of a new Support Plan</description>
    <label>Support Plan Manager Notified</label>
    <type>Checkbox</type>
</CustomField>