force-app/main/default/objects/aos_Support_Request__c/fields/aos_SupportPlanManager__c.field-meta.xml
<CustomField>
    <fullName>aos_SupportPlanManager__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Plan Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_Behaviour_Support_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>